--- a/src/global.sass
+++ b/src/global.sass
@@ -5,7 +5,7 @@
 		stroke-width: 2px
 		fill: none 
 
-a.icon:active, a.icon.filled
+.icon:active, .icon.filled
 	border-color: var(--color)!important
 	path
 		stroke: var(--bg)
